add: .inactive to ratings, functions, edit: styles
add:
- active, inactive designs
- inactive class to <p>
- functions

edit:
- remove and update unnecessary designs
- remove the default value in feedback text

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
       <p class="para">Please let us know how we did with your support request. All feedback is appreciated
         to help us improve our offering!</p>
       <div class="d-flex rating-container">
-        <p class="rating">1</p>
-        <p class="rating">2</p>
-        <p class="rating">3</p>
-        <p class="rating">4</p>
-        <p class="rating">5</p>
+        <p class="rating inactive">1</p>
+        <p class="rating inactive">2</p>
+        <p class="rating inactive">3</p>
+        <p class="rating inactive">4</p>
+        <p class="rating inactive">5</p>
       </div>
       <button>Submit</button>
     </div>
@@ -39,7 +39,7 @@
   <div class="thanks-wrapper">
     <div class="d-flex container thanks-container">
       <img class="thanks-icon" src="images/illustration-thank-you.svg" alt="thanks icon">
-      <p class="feedback">You selected <span id="feedback">4</span> out of 5</p>
+      <p class="feedback">You selected <span id="feedback"></span> out of 5</p>
 
       <h1>Thank you!</h1>
 
@@ -49,7 +49,7 @@
   </div>
 
   <!-- Thank you state end -->
-
+  <script src="rating.js"></script>
 </body>
 
 </html>
